kubernetes/manifests/deploy-web.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name:  go-web-app-deployment
  labels:
    app:  go-web-app
spec:
  selector:
    matchLabels:
      app: go-web-app
  template:
    metadata:
      labels:
        app:  go-web-app
    spec:
      containers:
      - image: rajamuneer/go-web-app:v2
        name:  go-web-app
        ports:
        - containerPort:  8080
